--- a/JSON__Summarizer.ipynb
+++ b/JSON__Summarizer.ipynb
@@ -33,20 +33,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import JSONLoader\n",
-    "loader = JSONLoader(file_path='Test.json', jq_schema='.content' )"
+    "loader = JSONLoader(file_path='Patient_ID_BABY JESUS_2024-09-19T01_46_50.449Z.json', jq_schema='.', text_content=False)\n",
+    "docs  = loader.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size = 1000, chunk_overlap = 100, add_start_index = True)\n",
+    "all_splits = text_splitter.split_documents(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embed = OpenAIEmbeddings(show_progress_bar=True, request_timeout= 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfacd9c50e9346de874eaa99e2ec0be6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from langchain_chroma import Chroma\n",
+    "\n",
+    "vectorstore = Chroma.from_documents(documents=all_splits, embedding=embed, persist_directory= './DEMON_db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = vectorstore.as_retriever(search_type=\"similarity\",search_kwargs={'k': 6})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "template = \"\"\"Use the following pieces of context to summarize the data at the end.\n",
+    "If you dont know, just say you dont know. \n",
+    "Pretend you are a health care worker at the ned of your shift. \n",
+    "Now is the time for patient handover. Explain and summarize to the next nurse the status of the patient described in the JSON file.\n",
+    "In the case of irregular vital sign fluctuations, flag it and mention it \n",
+    "\n",
+    "Always say \"The End!\", in a new line at the end of the answer.\n",
+    "\n",
+    "{context}\n",
+    "\n",
+    "Question: {question}\n",
+    "\n",
+    "Helpful Answer:\"\"\"\n",
+    "\n",
+    "\n",
+    "custom_rag_prompt = PromptTemplate.from_template(template)\n",
+    "\n",
+    "rag_chain = ({\"context\": retriever | format_docs, \"question\": RunnablePassthrough()} | custom_rag_prompt | llm | StrOutputParser())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d4fd6ae2a3b4339a8b6820f367eed48",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "During the shift, the patient \"BABY JESUS\" was continuously monitored. The baby was not physically present ('no_baby' in occupancy). The environment remained consistent with low lighting, supine position, and covered with a blanket. No interventions were needed, and the NIPS pain assessment consistently indicated no pain.\n",
+      "\n",
+      "Vital sign observations included:\n",
+      "\n",
+      "- **Heart Rate:** There were significant fluctuations in the heart rate. It ranged from a low of 80 bpm to a high of 159 bpm. Notable fluctuations occurred, such as the drop from 142 bpm to 87 bpm and subsequent rise to 154 bpm.\n",
+      "- **Respiratory Rate:** The respiratory rate remained steady at 40 breaths per minute.\n",
+      "- **Body Temperature:** Consistent at 37°C throughout the observations.\n",
+      "\n",
+      "Overall, the main concern is the irregular fluctuations in heart rate, which should be flagged for further monitoring and evaluation.\n",
+      "\n",
+      "The End!\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = rag_chain.invoke(\"Summarize\")\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
