--- a/Model_Prep_V2.ipynb
+++ b/Model_Prep_V2.ipynb
@@ -17,25 +17,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First 5 hours\n",
+    "#First 20 hours\n",
     "\n",
     "subset_ranges = {\n",
-    "    1: {'ecg': (0, int(4.5e6)), 'resp': (int(0), int(9e6))},\n",
-    "    2: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    3: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    4: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    5: {'ecg': (int(0), int(4.5e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    6: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    7: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    8: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    9: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))},\n",
-    "    10: {'ecg': (int(0), int(9e6)), 'resp': (int(0), int(0.9e6))}\n",
+    "    1: {'ecg': (0, int(18e6)), 'resp': (0, int(36e6))},\n",
+    "    2: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    3: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    4: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    5: {'ecg': (0, int(18e6)), 'resp': (0, int(3.6e6))},\n",
+    "    6: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    7: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    8: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    9: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
+    "    10: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_outliers_iqr(data, column_name):\n",
+    "    \"\"\"\n",
+    "    Removes outliers from a pandas DataFrame based on the IQR method.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        data (pd.DataFrame): The input data containing the column to filter.\n",
+    "        column_name (str): The name of the column to remove outliers from.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with outliers removed.\n",
+    "    \"\"\"\n",
+    "    Q1 = data[column_name].quantile(0.25)\n",
+    "    Q3 = data[column_name].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    filtered_data = data[(data[column_name] >= lower_bound) & (data[column_name] <= upper_bound)]\n",
+    "    return filtered_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,10 +104,10 @@
     "        resp_times = resp_times[:len(heart_rates)]\n",
     "        respiration_rates = respiration_rates[:len(heart_rates)]\n",
     "    else:\n",
-    "        median_resp_peak = np.median(resp_times) if len(resp_times) > 0 else 0\n",
-    "        resp_times = np.pad(resp_times, (0, len(heart_rates) - len(resp_times)), 'constant', constant_values=median_resp_peak)\n",
-    "        median_resp_rate = np.median(respiration_rates) if len(respiration_rates) > 0 else 0\n",
-    "        respiration_rates = np.pad(respiration_rates, (0, len(heart_rates) - len(respiration_rates)), 'constant', constant_values=median_resp_rate)\n",
+    "        Q1_resp_peak = np.quantile(resp_times, 0.25) if len(resp_times) > 0 else 0\n",
+    "        resp_times = np.pad(resp_times, (0, len(heart_rates) - len(resp_times)), 'constant', constant_values=Q1_resp_peak)\n",
+    "        Q1_resp_rate = np.quantile(respiration_rates, 0.25) if len(respiration_rates) > 0 else 0\n",
+    "        respiration_rates = np.pad(respiration_rates, (0, len(heart_rates) - len(respiration_rates)), 'constant', constant_values=Q1_resp_rate)\n",
     "\n",
     "    # Create a DataFrame to store features\n",
     "    data = pd.DataFrame({\n",
@@ -89,6 +116,8 @@
     "        'respiration_peak_time': resp_times / resp_record.fs,\n",
     "        'respiration_rate': respiration_rates,\n",
     "    })\n",
+    "    data = remove_outliers_iqr(data, 'heart_rate')\n",
+    "    data = remove_outliers_iqr(data, 'respiration_rate')\n",
     "\n",
     "    return data\n",
     "\n",
@@ -98,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,15 +139,8 @@
     "    all_infants_subset_data = pd.concat([all_infants_subset_data, infant_subset_data], ignore_index=True)\n",
     "\n",
     "# Save the unified subset dataset to CSV for future use\n",
-    "all_infants_subset_data.to_csv('all_infants_5h_subset_vital_signs.csv', index=False)\n"
+    "all_infants_subset_data.to_csv('all_infants_20h_subset_vital_signs.csv', index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
