--- a/Model_Prep_V2.ipynb
+++ b/Model_Prep_V2.ipynb
@@ -17,20 +17,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First 20 hours\n",
+    "#First 5 hours\n",
     "\n",
     "subset_ranges = {\n",
-    "    1: {'ecg': (0, int(18e6)), 'resp': (0, int(36e6))},\n",
-    "    2: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    3: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    4: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    5: {'ecg': (0, int(18e6)), 'resp': (0, int(3.6e6))},\n",
-    "    6: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    7: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    8: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    9: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))},\n",
-    "    10: {'ecg': (0, int(36e6)), 'resp': (0, int(3.6e6))}\n",
-    "}"
+    "    1: {'ecg': (0, 4500000), 'resp': (0, 9000000)},\n",
+    "    2: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    3: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    4: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    5: {'ecg': (0, 4500000), 'resp': (0, 900000)},\n",
+    "    6: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    7: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    8: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    9: {'ecg': (0, 9000000), 'resp': (0, 900000)},\n",
+    "    10: {'ecg': (0, 9000000), 'resp': (0, 900000)}\n",
+    "}\n"
    ]
   },
   {
@@ -99,27 +99,21 @@
     "    resp_peak_annotations = wfdb.rdann(f'infant{infant_number}_resp', 'resp')\n",
     "    resp_times, respiration_rates = extract_respiration_rate(resp_peak_annotations, resp_range[0], resp_range[1])\n",
     "\n",
-    "    # Truncate or pad respiration peaks and rates to match heart rate length\n",
-    "    if len(resp_times) > len(heart_rates):\n",
-    "        resp_times = resp_times[:len(heart_rates)]\n",
-    "        respiration_rates = respiration_rates[:len(heart_rates)]\n",
-    "    else:\n",
-    "        Q1_resp_peak = np.quantile(resp_times, 0.25) if len(resp_times) > 0 else 0\n",
-    "        resp_times = np.pad(resp_times, (0, len(heart_rates) - len(resp_times)), 'constant', constant_values=Q1_resp_peak)\n",
-    "        Q1_resp_rate = np.quantile(respiration_rates, 0.25) if len(respiration_rates) > 0 else 0\n",
-    "        respiration_rates = np.pad(respiration_rates, (0, len(heart_rates) - len(respiration_rates)), 'constant', constant_values=Q1_resp_rate)\n",
-    "\n",
-    "    # Create a DataFrame to store features\n",
-    "    data = pd.DataFrame({\n",
+    "    # Create DataFrame for Heart Rate\n",
+    "    heart_rate_df = pd.DataFrame({\n",
     "        'time_r_peak': r_times / ecg_record.fs,\n",
     "        'heart_rate': heart_rates,\n",
+    "    })\n",
+    "    heart_rate_df = remove_outliers_iqr(heart_rate_df, 'heart_rate')\n",
+    "    \n",
+    "    # Create DataFrame for Respiration Rate\n",
+    "    respiration_rate_df = pd.DataFrame({\n",
     "        'respiration_peak_time': resp_times / resp_record.fs,\n",
     "        'respiration_rate': respiration_rates,\n",
     "    })\n",
-    "    data = remove_outliers_iqr(data, 'heart_rate')\n",
-    "    data = remove_outliers_iqr(data, 'respiration_rate')\n",
+    "    respiration_rate_df = remove_outliers_iqr(respiration_rate_df, 'respiration_rate')\n",
     "\n",
-    "    return data\n",
+    "    return heart_rate_df, respiration_rate_df\n",
     "\n",
     "\n",
     "\n"
@@ -131,15 +125,157 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_infants_subset_data = pd.DataFrame()\n",
+    "all_heart_rate_data = pd.DataFrame()\n",
+    "all_respiration_rate_data = pd.DataFrame()\n",
     "\n",
     "for i in range(1, 11):  # Assuming 10 infants numbered from 1 to 10\n",
-    "    infant_subset_data = process_infant_subset(i, subset_ranges)\n",
-    "    infant_subset_data['infant_number'] = i  # Add a column to identify the infant\n",
-    "    all_infants_subset_data = pd.concat([all_infants_subset_data, infant_subset_data], ignore_index=True)\n",
+    "    heart_rate_df, respiration_rate_df = process_infant_subset(i, subset_ranges)\n",
+    "    heart_rate_df['infant_number'] = i  # Add a column to identify the infant\n",
+    "    respiration_rate_df['infant_number'] = i  # Add a column to identify the infant\n",
+    "    all_heart_rate_data = pd.concat([all_heart_rate_data, heart_rate_df], ignore_index=True)\n",
+    "    all_respiration_rate_data = pd.concat([all_respiration_rate_data, respiration_rate_df], ignore_index=True)\n",
     "\n",
-    "# Save the unified subset dataset to CSV for future use\n",
-    "all_infants_subset_data.to_csv('all_infants_20h_subset_vital_signs.csv', index=False)\n"
+    "# Save the unified subset datasets to CSV for future use\n",
+    "#all_heart_rate_data.to_csv('all_infants_5h_subset_heart_rate_outlierRem.csv', index=False)\n",
+    "#all_respiration_rate_data.to_csv('all_infants_5h_subset_respiration_rate_outlierRem.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>respiration_peak_time</th>\n",
+       "      <th>respiration_rate</th>\n",
+       "      <th>infant_number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.22</td>\n",
+       "      <td>54.545455</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>411.28</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>653.52</td>\n",
+       "      <td>50.847458</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>959.22</td>\n",
+       "      <td>39.473684</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1255.22</td>\n",
+       "      <td>65.217391</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>16368.14</td>\n",
+       "      <td>62.500000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>16592.44</td>\n",
+       "      <td>63.829787</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>16814.88</td>\n",
+       "      <td>48.387097</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>17643.14</td>\n",
+       "      <td>78.947368</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>17853.72</td>\n",
+       "      <td>47.619048</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    respiration_peak_time  respiration_rate  infant_number\n",
+       "0                    2.22         54.545455              2\n",
+       "1                  411.28         40.000000              2\n",
+       "2                  653.52         50.847458              2\n",
+       "3                  959.22         39.473684              2\n",
+       "4                 1255.22         65.217391              2\n",
+       "..                    ...               ...            ...\n",
+       "71               16368.14         62.500000              2\n",
+       "72               16592.44         63.829787              2\n",
+       "73               16814.88         48.387097              2\n",
+       "74               17643.14         78.947368              2\n",
+       "75               17853.72         47.619048              2\n",
+       "\n",
+       "[76 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = 'all_infants_5h_subset_respiration_rate_outlierRem.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "infant_2_data = data[data['infant_number']==2]\n",
+    "sampled_infant_2_data = infant_2_data.iloc[::223].reset_index(drop=True)\n",
+    "sampled_infant_2_data\n",
+    "\n",
+    "#output_inf_2_file_path = 'infant_2_5h_respiration_rate_outlierRem.csv'\n",
+    "#infant_2_data.to_csv(output_inf_2_file_path, index=False)\n",
+    "\n"
    ]
   }
  ],
